# research

./: .editorconfig  .env.offline  .gitattributes  .gitignore  Justfile  LICENSE  Makefile  Pipfile  README.md  dev-requirements.txt  mkdocs.yml  pyproject.toml  requirements.txt
dnn/modeling/: activation.py  attention.py  embedding.py  moe.py  pos_encoding.py  transformer.py
llm/gemma/: Dockerfile
llm/gpt/: model.py  train.py
llm/llama2/: model.py
projects/sc/: README.md  download.py  download.sh  eval.py  few_shot_prompt.py  generate_sc.py  inference.py  main.py  results.py  speculative.py  template_config.yaml  vllm_tutorial.py
projects/sc/configs/: llama3_1_8b_config.yaml  llama3_2_3b_config.yaml  template_config.yaml
projects/vit_cifar10/: .gitignore  config.yml  main.py
research/: __init__.py  config.py  logger.py  monitor.py
research/audio/: wav2vec_encoder.py
research/audio/utils/: spectrogram.py
research/kernels/: attn.py
research/llm/: collate.py  sample.py
research/llm/data/: common.py  major_tom.py  the_stack.py  wikipedia.py
research/llm/inference/: generate.py
research/llm/layers/: gqa.py
research/llm/models/: gpt.py
research/llm/tokenizers/: tokenizer.py
research/llm/training/: train.py
research/multimodal/clip/: model.py  train.py
research/nn/: activations.py  attention.py  data.py  precision.py  quantization.py  trainer.py  uncertainty.py
research/nn/activations/: activations.py  sigmoid.py  softmax.py
research/nn/evals/: regression.py
research/nn/layers/: ca.py  embeddings.py  gqa.py  layernorm.py  lora.py  mha.py  moe.py  mqa.py  pos_encoding.py  utils.py
research/nn/losses/: ce.py  dice.py  focal.py  mse.py
research/nn/modeling/: attention.py  dense.py  transformer.py
research/nn/models/: gda.py  glm.py  mlp.py  nb.py  transformer.py
research/trainer/: _base.py  logger.py  schedulers.py  single_device.py  trainer_class.py  utils.py
research/training/: trainer_class.py
research/utils/: __init__.py  benchmark.py  distrib.py  logging.py  profiling.py  utils.py
research/vision/: viz.py
research/vision/segmentation/models/: unet.py
research/vision/vit/: config.py  model.py  patch_embedding.py  train.py
scripts/: distrib_train.slurm.sh  distrib_train_calm_llama.slurm.sh  gen_ref_pages.py  tokenize_parallel.py  tokenize_parallel.slurm.sh
tests/: test_attention.py  test_distrib.py  test_dnn.py  test_einsum.py  test_gpt.py  test_llama2.py  test_logging.py  test_pos_encoding.py  test_tokenizer.py  test_trainer.py  test_utils.py  test_vit.py  testdata.py
tests/nn/: test_evals.py  test_losses.py  test_models.py
tutorials/: fsdp.py  test_calm_llama.py  trainer_class_2.py
utils/: __init__.py  logging.py  utils.py
utils/data/: c4.py  common.py  major_tom.py  mmlu.py  wikipedia.py
utils/dnn/: data.py  generate.py  lora.py  tokenizer.py  trainer.py  trainer_class.py
utils/dnn/modeling/: activation.py  attention.py  dense.py  lora.py  moe.py  pos_encoding.py  transformer.py
vision/vit/: model.py  train.py
